@@ -19,15 +19,23 @@ function PrintMessageAll(msgtype, msg)
 	end
 end
 
-function TalkToRange(msg, pos, size)
-	local ents = ents.FindInSphere(pos, size)
-
+function TalkToRange(ply, PlayerName, Message, size)
+	local ents = ents.FindInSphere(ply:EyePos(), size)
+	local col = team.GetColor(ply:Team())
 	for k, v in pairs(ents) do
-		if v:IsPlayer() then
-			v:ChatPrint(msg)
-			v:PrintMessage(2, msg)
+		if v:IsPlayer() then	
+			v:SendLua("chat.AddText(Color("..col.r..","..col.g..","..col.b.."), '"..PlayerName.."', Color(255,255,255,255), ': "..Message.."')")
 		end
 	end
+end
+
+function TalkToPerson(reciever, col1, text1, col2, text2, ...)
+	local extra = {...}//TODO
+	if not col2 then
+		reciever:SendLua("chat.AddText(Color("..col1.r..","..col1.g..","..col1.b.."), '"..text1.."')")
+		return
+	end
+	reciever:SendLua("chat.AddText(Color("..col1.r..","..col1.g..","..col1.b.."), '"..text1.."', Color("..col2.r..","..col2.g..","..col2.b.."), ': "..text2.."')")
 end
 
 function FindPlayer(info)
